--- a/styles/compose.css
+++ b/styles/compose.css
@@ -5,18 +5,9 @@
 }
 
 .container {
-    height: 80vh;
+    /* height: 80vh; */
     width: 95vw;
     padding: 10px;
     /* background-color: #F5F5F5; */
     
 }
-
-#inbox {
-    border: 1px solid #D1D1D1;
-    border-radius: 3%;
-    padding: 40px;
-    height: 100vh;
-}
-
-/* .search  */
