--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,10 @@ html {
     background-color: #18181A;
 }
 
+a {
+    text-decoration: none;
+}
+
 .container {
     /* height: 80vh; */
     width: 95vw;
@@ -18,15 +22,83 @@ html {
 }
 
 .inbox {
-    display: flex;
+    
     border: 1px solid #D1D1D1;
     border-radius: 3%;
-    padding: 10px;
-    height: 100vh;
+    margin-top: 15px;
+    /* padding: 5px; */
+    /* height: 100vh; */
     background-color: #2a2a2d;
 }
 
-ul {
+.each-email {
+    display: flex;
+}
+
+/* table {
+    border-spacing: 10px;
+} */
+
+.search {
+    width: 100%;
+    height: 45px;
+    border-radius: 25px;
+    text-align: right;
+    /* padding-right: 25px; */
+    font-size: 2rem;
+}
+
+.compose-btn {
+    background-color: transparent;
+    position: absolute;
+    top: 35px;
+    right: 45px;
+    font-size: 1.7rem;
+    text-align: right;
+    border-radius: 25px;
+}
+
+table {
+    border: 1px solid;
+    border-radius: 25px;
+    width: 100%;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+tr {
+    border-bottom: 1px solid;
+    width: 100%;
+    margin: 5px;
+}
+
+tr:hover {
+    background-color: white;
+}
+
+/* td {
+    border: 1px solid pink;
+} */
+
+.sender {
+    width: 100px;
+    font-weight: bold;
+}
+
+.subject {
+    font-weight: bold;
+}
+
+.message {
+    font-weight: lighter;
+}
+
+/* .subject {
+    padding-left: 20px;
+    text-align: left;
+} */
+
+/* ul {
     list-style: none;
     background-color: transparent;
 }
@@ -34,7 +106,9 @@ ul {
 li {
     margin: 10px;
     background-color: transparent;
-}
+    /* border-bottom: 1px solid; */
+    /* padding-bottom: 4px;
+} */
 
 #from {
     background-color: transparent;
@@ -44,9 +118,16 @@ li {
     /* position: absolute;
     top: 160px;
     right: 150px; */
-    margin-left: 5vw;
+    margin-left: 2vw;
     background-color: transparent;
 
+}
+
+#line {
+    /* display: block; */
+    border-bottom: 1px solid;
+    /* width: 100%; */
+    border: 1px solid;
 }
 
 /* .search  */
