--- a/styles/index.css
+++ b/styles/index.css
@@ -7,12 +7,20 @@ html {
     background-color: #18181A;
 }
 
+h1 {
+    cursor:pointer;
+}
+
 a {
     text-decoration: none;
 }
 
 span {
     font-weight: bold;
+}
+
+button {
+    cursor:pointer;
 }
 
 .body-style {
@@ -27,7 +35,7 @@ span {
 
 .inbox {
     
-    border: 1px solid #D1D1D1;
+    /* border: 1px solid #d1d1d100; */
     border-radius: 3%;
     margin-top: 15px;
     background-color: #2a2a2d;
@@ -37,7 +45,6 @@ span {
     display: flex;
 }
 
-
 .search {
     width: 100%;
     height: 45px;
@@ -46,7 +53,7 @@ span {
     font-size: 2rem;
 }
 
-.compose-btn {
+#compose-btn {
     background-color: transparent;
     position: absolute;
     top: 35px;
@@ -56,8 +63,102 @@ span {
     border-radius: 25px;
 }
 
+.hide-compose-email {
+    display: none;
+}
+
+.show-compose-email {
+    display: block;
+    height: 100%;
+}
+
+
+
+
+/* form {
+    
+} */
+
+
+
+.form-container {
+    border: 1px solid #d1d1d125;
+    margin-top: 20px;
+    border-radius: 25px;
+    /* width: 90vw; */
+    /* padding: 10px; */
+    padding-top: 25px;
+    /* border: 1px solid #fcb419; */
+    /* height: 95vh;     */
+    background-color: #29292c;
+    color: #D1D1D1;
+}
+
+.form-header {
+    margin-left: 5px;
+    margin-top: 0px;
+    display: flex;
+    justify-content: space-between;
+    /* margin-left: 25px;
+    padding-top: 0px; */
+    /* background-color: ; */
+}
+
+.close-icon {
+    cursor: pointer;
+    color: white;
+}
+
+.form-input {
+    
+    border-radius: 25px;
+    font-size: 1rem;
+    padding: 15px;
+    background-color: #18181A;
+    margin-bottom: 15px;
+    /* color: #D1D1D1; */
+}
+
+textarea {
+    border-radius: 25px;
+    font-size: 1rem;
+    color: #D1D1D1;
+    min-height: 200px;
+    height: 50vh;
+    width: 95%;
+    padding: 15px;
+    background-color: #18181A;
+}
+
+.compose-body {
+    width: 90%;
+    margin: 0 auto;
+}
+
+/* .body {
+    width: 100%;
+} */
+
+
+.send-btn {
+    position: relative;
+    font-size: 1.4em;
+    color: black;
+    /* font-weight: bold; */
+    /* margin-left: 60vw; */
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 25px;
+    /* right: 0px; */
+    /* text-align: right; */
+    background-color: #fcb419;
+    font-weight: bold;
+    padding: 10px;
+    font-size: .8rem;
+}
+
 table {
-    border: 1px solid;
+    border: 1px solid #d1d1d125;
     border-radius: 25px;
     width: 100%;
     padding: 20px 21px;
@@ -88,7 +189,8 @@ td {
 }
 
 .sender {
-    width: 100px;
+    width: 115px;
+    margin-right: 20px;
     font-weight: bold;
     flex-shrink: 0;
 }
@@ -120,9 +222,12 @@ td {
 }
 
 .collapse {
+    width: 95%;
     white-space: nowrap;
 }
 
 .expand-email {
-    white-space: wrap;
+    white-space: pre-line;
+    border-bottom: 1px solid #fcb419;
+
 }
