--- a/email-local/frontend/styles/index.css
+++ b/email-local/frontend/styles/index.css
@@ -246,6 +246,7 @@ footer {
     width: 20%;
     font-weight: bold;
     flex-shrink: 0;
+    padding-left: 20px;
 }
 
 .to {
@@ -308,6 +309,3 @@ tr:hover .delete-icon {
     white-space: pre-line;
     /* border-bottom: 1px solid ; */
 }
-
-
-
