--- a/email-local/frontend/styles/index.css
+++ b/email-local/frontend/styles/index.css
@@ -1,6 +1,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     color: #D1D1D1;
+    cursor: default;
 }
 
 html {
@@ -13,6 +14,7 @@ h1 {
 
 a {
     text-decoration: none;
+    cursor: pointer;
 }
 
 span {
@@ -32,8 +34,6 @@ button {
 }
 
 .inbox {
-    
-    /* border: 1px solid #d1d1d100; */
     border-radius: 3%;
     margin-top: 15px;
     background-color: #2a2a2d;
@@ -70,24 +70,11 @@ button {
     height: 100%;
 }
 
-
-
-
-/* form {
-    
-} */
-
-
-
 .form-container {
     border: 1px solid #d1d1d125;
     margin-top: 20px;
     border-radius: 25px;
-    /* width: 90vw; */
-    /* padding: 10px; */
     padding-top: 25px;
-    /* border: 1px solid #fcb419; */
-    /* height: 95vh;     */
     background-color: #29292c;
     color: #D1D1D1;
 }
@@ -97,9 +84,6 @@ button {
     margin-top: 0px;
     display: flex;
     justify-content: space-between;
-    /* margin-left: 25px;
-    padding-top: 0px; */
-    /* background-color: ; */
 }
 
 .close-icon {
@@ -108,13 +92,11 @@ button {
 }
 
 .form-input {
-    
     border-radius: 25px;
     font-size: 1rem;
     padding: 15px;
     background-color: #18181A;
     margin-bottom: 15px;
-    /* color: #D1D1D1; */
 }
 
 textarea {
@@ -133,22 +115,13 @@ textarea {
     margin: 0 auto;
 }
 
-/* .body {
-    width: 100%;
-} */
-
-
 .send-btn {
     position: relative;
     font-size: 1.4em;
     color: black;
-    /* font-weight: bold; */
-    /* margin-left: 60vw; */
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 25px;
-    /* right: 0px; */
-    /* text-align: right; */
     background-color: #fcb419;
     font-weight: bold;
     padding: 10px;
@@ -160,7 +133,6 @@ textarea {
     display: flex;
     width: 80%;
     padding-left: 20px;
-    cursor: pointer;
 }
 
 .tab {
@@ -171,8 +143,8 @@ textarea {
     padding-top: 8px;
     padding-bottom: 5px;
     text-align: center;
+    cursor: pointer;
 }
-
 
 .tab:hover, .selected {
     background-color: #3E3E41;
@@ -183,7 +155,6 @@ table {
     border-radius: 25px;
     width: 98%;
     padding: 20px 21px;
-    /* margin-top: 20px; */
     table-layout: fixed;
     width: 100%;
     background-color: #252529;
@@ -202,15 +173,15 @@ tr:hover {
     cursor: pointer;
 }
 
-tr:nth-child(9n + 1):hover, tr:nth-child(9n + 1).expand-email { border-bottom: 1px solid #fcb419; }
-tr:nth-child(9n + 2):hover, tr:nth-child(9n + 2).expand-email { border-bottom: 1px solid #f78c1f; }
-tr:nth-child(9n + 3):hover, tr:nth-child(9n + 3).expand-email { border-bottom: 1px solid #f2545b; }
-tr:nth-child(9n + 4):hover, tr:nth-child(9n + 4).expand-email { border-bottom: 1px solid #e13f94; }
-tr:nth-child(9n + 5):hover, tr:nth-child(9n + 5).expand-email { border-bottom: 1px solid #9c27b0; }
-tr:nth-child(9n + 6):hover, tr:nth-child(9n + 6).expand-email { border-bottom: 1px solid #3f51b5; }
-tr:nth-child(9n + 7):hover, tr:nth-child(9n + 7).expand-email { border-bottom: 1px solid #2196f3; }
-tr:nth-child(9n + 8):hover, tr:nth-child(9n + 8).expand-email { border-bottom: 1px solid #00bcd4; }
-tr:nth-child(9n + 0):hover, tr:nth-child(9n + 0).expand-email { border-bottom: 1px solid #4caf50; }
+tr:nth-child(9n + 1):hover, tr:nth-child(9n + 1).expand-email { border-bottom: 1px solid #fcb419; background-color: #fcb41908; }
+tr:nth-child(9n + 2):hover, tr:nth-child(9n + 2).expand-email { border-bottom: 1px solid #f78c1f; background-color: #f78c1f08; }
+tr:nth-child(9n + 3):hover, tr:nth-child(9n + 3).expand-email { border-bottom: 1px solid #f2545b; background-color: #f2545b08; }
+tr:nth-child(9n + 4):hover, tr:nth-child(9n + 4).expand-email { border-bottom: 1px solid #e13f94; background-color: #e13f9408; }
+tr:nth-child(9n + 5):hover, tr:nth-child(9n + 5).expand-email { border-bottom: 1px solid #9c27b0; background-color: #9c27b008; }
+tr:nth-child(9n + 6):hover, tr:nth-child(9n + 6).expand-email { border-bottom: 1px solid #3f51b5; background-color: #3f51b508; }
+tr:nth-child(9n + 7):hover, tr:nth-child(9n + 7).expand-email { border-bottom: 1px solid #2196f3; background-color: #2196f308; }
+tr:nth-child(9n + 8):hover, tr:nth-child(9n + 8).expand-email { border-bottom: 1px solid #00bcd4; background-color: #00bcd408; }
+tr:nth-child(9n + 0):hover, tr:nth-child(9n + 0).expand-email { border-bottom: 1px solid #4caf50; background-color: #4caf5008; }
 
 tr {
     transition: border-bottom .5s ease-in-out;
@@ -220,7 +191,6 @@ tr:hover, tr.expand-email {
     transition: none;
 }
   
-
 td {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -238,11 +208,25 @@ footer {
     text-align: center;
 }
 
+.decryption-form {
+    margin-top: 0px;
+}
+
+.passphrase-input {
+    border-radius: 15px;
+    margin-top: 15px;
+    background-color: #252529;
+    height: 25px;
+    padding: 7px;
+    width: 100px;
+}
+
 .sender, .to {
-    width: 20%;
+    width: 27%;
     font-weight: bold;
     flex-shrink: 0;
     padding-left: 20px;
+    margin-right: 20px;
 }
 
 .to {
@@ -255,13 +239,14 @@ footer {
 
 .subject {
     font-weight: bold;
+    cursor: pointer;
 }
 
 .subject-message {
     font-weight: lighter;
     text-overflow: ellipsis;
     overflow: hidden;
-    padding-right: 20px;
+    padding-right: 10px;
 }
 
 .subject-message:hover {
@@ -270,20 +255,22 @@ footer {
 
 .date {
     flex-shrink: 0;
+    padding-left: 10px;
 }
 
 .delete-icon {
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease;
-    margin-left: 10px;
+    margin-left: 17px;
+    cursor: pointer;
+    height: 5px;
 }
 
 tr:hover .delete-icon {
     opacity: 1;
     visibility: visible;
 }
-
 
 #from {
     background-color: transparent;
@@ -296,7 +283,6 @@ tr:hover .delete-icon {
 }
 
 #line {
-    /* border-bottom: 1px solid; */
     border: 1px solid;
 }
 
@@ -307,5 +293,8 @@ tr:hover .delete-icon {
 
 .expand-email {
     white-space: pre-line;
-    /* border-bottom: 1px solid ; */
+}
+
+.footer a, p {
+    color: #414141;
 }
