--- a/pages/email/index.css
+++ b/pages/email/index.css
@@ -10,6 +10,7 @@ html {
 
 h1 {
     cursor:pointer;
+    margin-top: 45px;
 }
 
 a {
@@ -51,13 +52,22 @@ button {
     font-size: 2rem;
 }
 
-#compose-btn {
+.logout-btn {
     background-color: transparent;
     position: absolute;
-    top: 35px;
-    right: 45px;
+    top: 10px;
+    right: 10px;
+    font-size: 1rem;
+    border-radius: 25px;
+
+}
+
+.compose-btn {
+    background-color: transparent;
+    position: absolute;
+    top: 45px;
+    right: 15px;
     font-size: 1.7rem;
-    text-align: right;
     border-radius: 25px;
 }
 
